# mkmake

./: .gitignore  Cargo.toml  install_local.sh
src/: main.rs
test/: CMakeLists.txt
test/src/: main.cpp
