
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

# ============================================================================
# project name
# ============================================================================
PROJECT(test)

# ============================================================================
# c++ standard
# ============================================================================
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# ============================================================================
# output directory
# ============================================================================
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# ============================================================================
# source files
# ============================================================================
FILE(GLOB SRC_FILES
    "${CMAKE_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_SOURCE_DIR}/src/*.c"
)

FILE(GLOB INC_FILES
    "${CMAKE_SOURCE_DIR}/src/*.hpp"
    "${CMAKE_SOURCE_DIR}/src/*.h"
)

# ============================================================================
# target
# ============================================================================
ADD_EXECUTABLE(test ${SRC_FILES} ${INC_FILES})

# ============================================================================
# target includes
# ============================================================================
TARGET_INCLUDE_DIRECTORIES(test PRIVATE ${CMAKE_SOURCE_DIR}/include)

